functionality_templates/rancher_func_template.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: release-name-rancher
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
  labels:
    app: release-name-rancher
    chart: rancher-2.7.4
    heritage: Helm
    release: release-name
spec:
  replicas: 3
  selector:
    matchLabels:
      app: release-name-rancher
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: release-name-rancher
        release: release-name
      annotations:
        container.apparmor.security.beta.kubernetes.io/rancher: runtime/default
    spec:
      priorityClassName: rancher-critical
      serviceAccountName: release-name-rancher
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - release-name-rancher
              topologyKey: kubernetes.io/hostname
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: NotIn
                values:
                - windows
      tolerations:
      - key: cattle.io/os
        value: linux
        effect: NoSchedule
        operator: Equal
      containers:
      - image: rancher/rancher:v2.7.4
        imagePullPolicy: IfNotPresent
        name: rancher
        ports:
        - containerPort: 80
          protocol: TCP
        args:
        - --http-listen-port=80
        - --https-listen-port=443
        - --add-local=true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 30
        resources:
          limits:
            cpu: 250m
            memory: 128Mi
          requests:
            cpu: 250m
            memory: 128Mi
        volumeMounts: null
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
          runAsGroup: 25000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - CHOWN
            - FOWNER
            - FSETID
            - KILL
            - SETGID
            - SETUID
            - SETPCAP
            - SETFCAP
            - NET_RAW
            - SYS_CHROOT
            - AUDIT_WRITE
            add:
            - DAC_OVERRIDE
            - NET_BIND_SERVICE
            - MKNOD
      volumes: null
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 25000
      automountServiceAccountToken: false
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-rancher
  labels:
    app: release-name-rancher
    chart: rancher-2.7.4
    heritage: Helm
    release: release-name
  annotations:
    cert-manager.io/issuer: release-name-rancher
    cert-manager.io/issuer-kind: Issuer
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
spec:
  rules:
  - host: '*.example.com'
    http:
      paths:
      - backend:
          service:
            name: release-name-rancher
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - host
    secretName: tls-rancher-ingress
